export const snapshot = {};

snapshot[`Baseline/buckets/create/new metadata 1`] = `
{
  headers: {
    "accept-ranges": "bytes",
    "strict-transport-security": "max-age=31536000; includeSubDomains",
    "x-content-type-options": "nosniff",
    "x-xss-protection": "1; mode=block",
    vary: "Origin, Accept-Encoding",
  },
  status: 204,
}
`;

snapshot[`Proxy/buckets/create/new metadata 1`] = `
{
  headers: {},
  status: 204,
}
`;

snapshot[`Swift/buckets/create/new metadata 1`] = `
{
  headers: {},
  status: 204,
}
`;

snapshot[`Baseline/buckets/create/existing metadata 1`] = `
{
  headers: {
    "accept-ranges": "bytes",
    "strict-transport-security": "max-age=31536000; includeSubDomains",
    "x-content-type-options": "nosniff",
    "x-xss-protection": "1; mode=block",
    vary: "Origin, Accept-Encoding",
  },
  status: 204,
}
`;

snapshot[`Proxy/buckets/create/existing metadata 1`] = `
{
  headers: {},
  status: 204,
}
`;

snapshot[`Swift/buckets/create/existing metadata 1`] = `
{
  headers: {},
  status: 204,
}
`;

snapshot[`Baseline/buckets/delete/existing metadata 1`] = `
{
  headers: {
    "accept-ranges": "bytes",
    "strict-transport-security": "max-age=31536000; includeSubDomains",
    "x-content-type-options": "nosniff",
    "x-xss-protection": "1; mode=block",
    vary: "Origin, Accept-Encoding",
  },
  status: 204,
}
`;

snapshot[`Proxy/buckets/delete/existing metadata 1`] = `
{
  headers: {},
  status: 204,
}
`;

snapshot[`Swift/buckets/delete/existing metadata 1`] = `
{
  headers: {},
  status: 204,
}
`;

snapshot[`Baseline/buckets/delete/non-existent metadata 1`] = `
{
  headers: {
    "accept-ranges": "bytes",
    "content-length": "315",
    "content-type": "application/xml",
    "strict-transport-security": "max-age=31536000; includeSubDomains",
    "x-content-type-options": "nosniff",
    "x-xss-protection": "1; mode=block",
    vary: "Origin, Accept-Encoding",
  },
  status: 404,
}
`;

snapshot[`Baseline/buckets/delete/non-existent body 1`] = `
'<?xml version="1.0" encoding="UTF-8"?>
<Error><Code>NoSuchBucket</Code><Message>The specified bucket does not exist</Message><BucketName>no-such</BucketName><Resource>/no-such/</Resource><RequestId>ID</RequestId><HostId>HOST</HostId></Error>'
`;

snapshot[`Proxy/buckets/delete/non-existent metadata 1`] = `
{
  headers: {
    "content-length": "132",
    "content-type": "application/xml",
  },
  status: 404,
}
`;

snapshot[`Proxy/buckets/delete/non-existent body 1`] = `'<?xml version="1.0" encoding="UTF-8"?><Error><Code>NoSuchBucket</Code><Message>The specified bucket does not exist</Message></Error>'`;

snapshot[`Swift/buckets/delete/non-existent metadata 1`] = `
{
  headers: {
    "content-length": "167",
    "content-type": "application/xml",
  },
  status: 404,
}
`;

snapshot[`Swift/buckets/delete/non-existent body 1`] = `'<?xml version="1.0" encoding="UTF-8"?><Error><Code>NoSuchBucket</Code><Message><html><h1>Not Found</h1><p>The resource could not be found.</p></html></Message></Error>'`;

snapshot[`Baseline/buckets/head/existing metadata 1`] = `
{
  headers: {
    "accept-ranges": "bytes",
    "strict-transport-security": "max-age=31536000; includeSubDomains",
    "x-content-type-options": "nosniff",
    "x-xss-protection": "1; mode=block",
    vary: "Origin, Accept-Encoding",
  },
  status: 204,
}
`;

snapshot[`Proxy/buckets/head/existing metadata 1`] = `
{
  headers: {},
  status: 204,
}
`;

snapshot[`Swift/buckets/head/existing metadata 1`] = `
{
  headers: {},
  status: 204,
}
`;

snapshot[`Baseline/buckets/head/non-existent metadata 1`] = `
{
  headers: {
    "accept-ranges": "bytes",
    "content-length": "0",
    "strict-transport-security": "max-age=31536000; includeSubDomains",
    "x-content-type-options": "nosniff",
    "x-minio-error-code": "NoSuchBucket",
    "x-minio-error-desc": '"The specified bucket does not exist"',
    "x-xss-protection": "1; mode=block",
    vary: "Origin, Accept-Encoding",
  },
  status: 404,
}
`;

snapshot[`Proxy/buckets/head/non-existent metadata 1`] = `
{
  headers: {
    "content-length": "0",
  },
  status: 404,
}
`;

snapshot[`Swift/buckets/head/non-existent metadata 1`] = `
{
  headers: {
    "content-length": "0",
  },
  status: 404,
}
`;
